--- a/die_wetter_app/pubspec.yaml
+++ b/die_wetter_app/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   uuid: ^3.0.6
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^2.0.0-dev.9
+  path:
+  http:
+  flutter_slidable:
   
 
 dev_dependencies:
