--- a/die_wetter_app/pubspec.yaml
+++ b/die_wetter_app/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   path_provider: ^2.0.1
   uuid: ^3.0.6
   flutter_hooks: ^0.18.0
-  hooks_riverpod: ^2.0.0-dev.9
+  flutter_riverpod:
   path:
   http:
   flutter_slidable:
