--- a/die_wetter_app/pubspec.yaml
+++ b/die_wetter_app/pubspec.yaml
@@ -80,7 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/json_data/
   #  - assets/images
 
   # An image asset can refer to one or more resolution-specific "variants", see
