--- a/die_wetter_app/pubspec.yaml
+++ b/die_wetter_app/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_slidable:
   flutter_typeahead: ^4.1.1
   json_serializable: ^6.5.4
+  json_annotation: ^4.7.0
   
 
 dev_dependencies:
